--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babylonjs/core": "^8.45.3",
     "@babylonjs/loaders": "^8.45.3",
+    "@babylonjs/materials": "^8.45.3",
     "zzfx": "^1.3.2"
   }
 }
