--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "singleQuote": true,
   "semi": true,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "tabWidth": 2,
   "useTabs": false,
   "printWidth": 100
